fix: unhide mobile menu in mobile view

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -320,6 +320,7 @@ h1 a:hover {
     }
 
     .header-mobile {
+        display: block;
         position: absolute;
         top: 0;
         bottom: 0;
